<resources>
    <string name="app_name">Finance Control</string>
    <string name="app_name_1">Finance</string>
    <string name="app_name_2">Control</string>
    <string name="operation">Cadastro de Operações</string>
    <string name="search">Pesquisar</string>
    <string name="list">Lista Classificada</string>
    <string name="extract">Extrato</string>
    <string name="exit">Sair</string>
    <string name="image_icon">Logo</string>
    <string name="categories">Categoria da Operação:</string>
    <string name="operations">Operação:</string>
    <string name="value">Valor: </string>
    <string name="date">Selecione a Data</string>
    <string name="date1">Data de Início</string>
    <string name="date2">Data do Fim</string>
    <string name="back">Voltar</string>
    <string name="register">Cadastrar</string>
    <string name="textview">TextView</string>
    <string name="addCat">Adiciona uma Categoria</string>
</resources>